# pi

./: .dbdiagram  .env.example  .gitignore  README.md  pyproject.toml
dashboard/: Hello.py
dashboard/pages/: 1_📄_Tabela.py  1_📊_Tabela.py  2_📈_Gráfico_anual.py  2_📈_Gráficos.py  3_📊_Gráficos_Dinâmicos.py
dashboard/pages/utils/: plots.py  table.py
data_ingestion/: api.py  logs.py  main.py
data_ingestion/services/: api_service.py  cloud_db_service.py  data_processor_service.py  data_service.py  db_service.py  local_db_service.py  log_service.py
data_ingestion/utils/: decorators.py
notebooks/: get_data.ipynb  machine_learning.ipynb
report/: report.aux  report.out  report.tex
