[project]
name = "pi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "jupyterlab>=4.4.2",
    "pandas>=2.2.3",
    "pydantic>=2.11.4",
    "rich>=14.0.0",
    "streamlit>=1.45.1",
    "tqdm>=4.67.1",
]

[tool.ruff.lint]
preview = true
select = [
    "I",
    "F",
    "E",
    "W",
    "N",
    "PL",
    "PT",
    "ANN",
    "Q",
    "ARG",
    "PD",
    "NPY",
    "FAST",
    "RUF",
    "PERF",
]
ignore = ["PLR0913", "PLR0917", "PD901"]

[tool.ruff.format]
preview = true
quote-style = "double"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
